# HDSync

./: .gitignore  AUTHORS  ChangeLog  NEWS  README  TODO  configure.ac
doc/: CreateApplicationImage.html  hdsync-diagram.dia  hdsync_manual.org  howto_create_app_wdxltv.txt  howto_ir_injection.txt  howto_setup.org  ir_injection.html  ir_injection.txt
scripts/: S00custom-options  S88hdsync  S88wdhdsync  assemble-app-bin.sh  hdsync.conf  listen-handshake.sh  listen-sync.sh  offer-sync.sh  offer_handshake.sh  start_playback.sh  upnp.sh  utils-sync.sh  watchdog.sh  wdhdsync.conf
src/: Makefile.am  avremote.c  avremote_cli.c  broadcaster.cpp  cmdline.c  discover.h  hdsync_cli.c
tools/optware/: AUTHORS  README  S99optware  assemble-app-bin.sh  ipkg.conf  optware-binwrap.sh  optware-install.sh  optware-mount.sh  wget
tools/wdtvhack/: AUTHORS  README  S99wdtvhack  assemble-app-bin.sh
